add appendixes and remove survey links

--- a/es/index.html
+++ b/es/index.html
@@ -51,7 +51,23 @@
       </div>
       <div class="columns small-12 large-7 tiny-padding-top">
         <p class="text-large">¡Bienvenidos! El objetivo del Plan Comunitario de East Harlem es el desarrollo de una visión basada en la comunidad y la estrategia para su implementación. La Presidenta del Concejo Municipal de la Ciudad de Nueva York, Melissa Mark-Viverito, junto con la Junta Comunal 11, Voces Comunitarias Escuchadas, y la Presidenta del Condado de Manhattan, Gale Brewer, están liderando un esfuerzo para involucrar a los residentes e interesados locales en conversaciones significativas sobre el futuro del este de Harlem.</p>
-        <a href="../EHNP_FINAL_FINAL_LORES.pdf" class="button large">Descargar el Plan Definitivo <small>(PDF Inglés)</small></a>
+        <a href="../EHNP_FINAL_FINAL_LORES.pdf" class="button large expand tiny-margin-bottom">Descargar el Plan Definitivo <small>(PDF Inglés)</small></a>
+        <div style="margin-right:-0.5rem;">
+          <div class="row collapse">
+            <div class="columns small-12 large-3" style="padding-right:0.5rem;">
+              <a href="../EHNP_AppendixA_160315.pdf" class="button tiny expand tiny-margin-bottom">Appendix A <small>(PDF)</small></a>
+            </div>
+            <div class="columns small-12 large-3" style="padding-right:0.5rem;">
+              <a href="../EHNP_AppendixB_160315.pdf" class="button tiny expand tiny-margin-bottom">Appendix B <small>(PDF)</small></a>
+            </div>
+            <div class="columns small-12 large-3" style="padding-right:0.5rem;">
+              <a href="../EHNP_AppendixC_160315.pdf" class="button tiny expand tiny-margin-bottom">Appendix C <small>(PDF)</small></a>
+            </div>
+            <div class="columns small-12 large-3" style="padding-right:0.5rem;">
+              <a href="../EHNP_AppendixD_160315.pdf" class="button tiny expand tiny-margin-bottom">Appendix D <small>(PDF)</small></a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
