--- a/index.html
+++ b/index.html
@@ -56,7 +56,23 @@
           Board 11, Community Voices Heard, and Manhattan Borough President Gale
           Brewer are leading an effort to engage local residents and stakeholders
           in meaningful conversations about the future of East Harlem.</p>
-          <a href="EHNP_FINAL_FINAL_LORES.pdf" class="button large">Download the Final Plan <small>(PDF)</small></a>
+        <a href="EHNP_FINAL_FINAL_LORES.pdf" class="button large expand tiny-margin-bottom">Download the Final Plan <small>(PDF)</small></a>
+        <div style="margin-right:-0.5rem;">
+          <div class="row collapse">
+            <div class="columns small-12 large-3" style="padding-right:0.5rem;">
+              <a href="EHNP_AppendixA_160315.pdf" class="button tiny expand tiny-margin-bottom">Appendix A <small>(PDF)</small></a>
+            </div>
+            <div class="columns small-12 large-3" style="padding-right:0.5rem;">
+              <a href="EHNP_AppendixB_160315.pdf" class="button tiny expand tiny-margin-bottom">Appendix B <small>(PDF)</small></a>
+            </div>
+            <div class="columns small-12 large-3" style="padding-right:0.5rem;">
+              <a href="EHNP_AppendixC_160315.pdf" class="button tiny expand tiny-margin-bottom">Appendix C <small>(PDF)</small></a>
+            </div>
+            <div class="columns small-12 large-3" style="padding-right:0.5rem;">
+              <a href="EHNP_AppendixD_160315.pdf" class="button tiny expand tiny-margin-bottom">Appendix D <small>(PDF)</small></a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -77,15 +93,6 @@
             </div>
       </div>
     </div>
-
-    <div class="row">
-      <div class="columns large-9 large-centered text-center">
-        <h4>East 111th Street Community Visioning Survey</h4>
-        <p class="">Weren’t able to make it to the workshop? Still want to share input on new affordable housing development at the East 111th Street site? Submit your answers to this survey by March 16, 2016: <strong><a href="http://goo.gl/forms/PA6rWxFMdA">fill out the survey</a></strong> OR send them to <strong><a href="mailto:E111vision@hpd.nyc.gov">E111vision@hpd.nyc.gov</a></strong>.</p>
-      </div>
-    </div>
-
-    <hr>
 
     <div class="row" id="about">
       <div class="columns large-5">
