--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
         <a href="EHNP_FINAL_FINAL_LORES.pdf" class="button large expand tiny-margin-bottom">Download the Final Plan <small>(PDF)</small></a>
         <div style="margin-right:-0.5rem;">
           <div class="row collapse">
-            <div class="columns small-12 large-3" style="padding-right:0.5rem;">
-              <a href="EHNP_AppendixA_160315.pdf" class="button tiny expand tiny-margin-bottom">Appendix A <small>(PDF)</small></a>
+            <div class="columns small-12 large-6" style="padding-right:0.5rem;">
+              <a href="EHNP_AppendixA_160315.pdf" class="button tiny expand tiny-margin-bottom">Process <small>(PDF)</small></a>
             </div>
-            <div class="columns small-12 large-3" style="padding-right:0.5rem;">
-              <a href="EHNP_AppendixB_160315.pdf" class="button tiny expand tiny-margin-bottom">Appendix B <small>(PDF)</small></a>
+            <div class="columns small-12 large-6" style="padding-right:0.5rem;">
+              <a href="EHNP_AppendixB_160315.pdf" class="button tiny expand tiny-margin-bottom">Surveys &amp; Feedback <small>(PDF)</small></a>
             </div>
-            <div class="columns small-12 large-3" style="padding-right:0.5rem;">
-              <a href="EHNP_AppendixC_160315.pdf" class="button tiny expand tiny-margin-bottom">Appendix C <small>(PDF)</small></a>
+            <div class="columns small-12 large-6" style="padding-right:0.5rem;">
+              <a href="EHNP_AppendixC_160315.pdf" class="button tiny expand tiny-margin-bottom">Community Visioning <small>(PDF)</small></a>
             </div>
-            <div class="columns small-12 large-3" style="padding-right:0.5rem;">
-              <a href="EHNP_AppendixD_160315.pdf" class="button tiny expand tiny-margin-bottom">Appendix D <small>(PDF)</small></a>
+            <div class="columns small-12 large-6" style="padding-right:0.5rem;">
+              <a href="EHNP_AppendixD_160315.pdf" class="button tiny expand tiny-margin-bottom">Research <small>(PDF)</small></a>
             </div>
           </div>
         </div>
