update menu for new content

--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
         <section class="top-bar-section">
           <!-- Left Nav Section -->
           <ul class="left">
-            <li class=""><a href="#about">About</a></li>
             <li class="has-dropdown">
-              <a href="#get-involved">Get Involved</a>
+              <a href="#about">About</a>
               <ul class="dropdown">
-                <li><a href="#calendar">Calendar</a></li>
-                <li><a href="#documents">Documents</a></li>
+                <li><a href="#now">What's happening now?</a></li>
+                <li><a href="#ulurp">What's the NYC land use public review process (ULURP)?</a></li>
+                <li><a href="#next">What comes next?</a></li>
               </ul>
             </li>
+            <li class=""><a href="#process">Process</a></li>
             <li class=""><a href="#contact">Contact</a></li>
           </ul>
           <!-- Right Nav Section -->
@@ -71,6 +72,8 @@
       </div>
     </div>
 
+    <hr id="now" style="height:0;margin:0;border:0;">
+
     <div class="row some-margin-bottom">
       <div class="columns">
         <h3>What's happening now?</h3>
@@ -85,7 +88,7 @@
       </div>
     </div>
 
-    <hr>
+    <hr id="ulurp">
 
     <div class="row some-margin-bottom">
       <div class="columns">
@@ -95,7 +98,7 @@
       </div>
     </div>
 
-    <hr>
+    <hr id="next">
 
     <div class="row some-margin-bottom">
       <div class="columns large-5">
