re-add google drive iframe

--- a/index.html
+++ b/index.html
@@ -201,6 +201,14 @@
       </div>
     </div>
 
+    <div class="row some-margin-top">
+      <div class="columns">
+        <div class="google-drive some-margin-bottom tiny-padding-top">
+          <iframe src="https://drive.google.com/embeddedfolderview?id=0B9LJ90BaDIDHflliN0hrRkJHd0QtMWRMOW5GRjEwSGlKak01OVhlLWU3SUw1QlRfbWdFc3M#list" width="800" height="600" frameborder="0"></iframe>
+        </div>
+      </div>
+    </div>
+
     <hr id="steering-committee-members">
 
     <div class="row">
